Fixed image becoming distorted on smaller screens

--- a/src/shared/styles/components/header.css
+++ b/src/shared/styles/components/header.css
@@ -14,6 +14,7 @@
 
         .headerContainer {
             display: grid;
+            grid-template-columns: 2fr 4fr;
             grid-auto-flow: column;
             grid-gap: 2rem;
             place-items: center;
@@ -24,7 +25,6 @@
 
             .logo {
                 display: block;
-                height: 40vh;
                 max-width: 100%;
             }
 
@@ -88,10 +88,15 @@
 @media (max-width: 900px) {
 
     .headerContainer {
+        grid-template-columns: none;
         grid-auto-flow: row;
         text-align: center;
         padding: 1rem;
         max-width: 100vw;
+    }
+
+    .logo {
+        max-height: 40vh;
     }
 
     .links {
